Closed Bug 301082 Opened 21 years ago Closed 21 years ago

xpcom-shutdown is too late to destroy cached compose windows

Categories

(MailNews Core :: Composition, defect)

x86
Linux
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: ajschult784, Assigned: neil)

References

Details

Attachments

(2 files)

As mentioned in bug 137698, if cached composition window is enabled on linux, there are gtk errors when exiting: (Gecko:19985): Gtk-CRITICAL **: gtk_widget_destroy: assertion `GTK_IS_WIDGET (widget)' failed (Gecko:19985): Gtk-CRITICAL **: gtk_main_quit: assertion `main_loops != NULL' failed nsAppStartup::Quit looks for other windows (via nsIWindowMediator) and attempts to close them, but it doesn't see the cached compose window. Later, when nsMsgComposeService gets shut down, it closes its cached window, which triggers another call to nsAppStartup::Quit. Things go south from there. I'll attach a stack for the last call to nsAppStartup::Quit
Attached file stacktrace —
this is the stacktrace during the call to nsAppStartup::Quit related to cached window compose
CTho got the same stack as attachment 189583 [details] on windows, so the fact that we try to shut down the app twice is probably cross-platform. Windows just doesn't complain about it.
Summary: with cached compose window, get Gtk-CRITICAL **: gtk_main_quit: assertion `main_loops != NULL' failed → xpcom-shutdown is too late to destroy cached compose windows
Attached patch Proposed patch — — Splinter Review
Assignee: nobody → neil.parkwaycc.co.uk
Status: NEW → ASSIGNED
Attachment #189633 - Flags: superreview?(bienvenu)
Attachment #189633 - Flags: review?(bienvenu)
Comment on attachment 189633 [details] [diff] [review] Proposed patch do we get the quit-application notification if the app is closed because the last open window is closed? sr=bienvenu, as long as you confirm that. I have a vague recollection of that being a problem in the past.
Attachment #189633 - Flags: superreview?(bienvenu)
Attachment #189633 - Flags: superreview+
Attachment #189633 - Flags: review?(bienvenu)
Attachment #189633 - Flags: review+
Comment on attachment 189633 [details] [diff] [review] Proposed patch biesi remembered that issue too, but I was able to persuade him that eConsiderQuit got quickly upgraded to eForceQuit if no windows are open.
Attachment #189633 - Flags: approval1.8b4?
Attachment #189633 - Flags: approval1.8b4? → approval1.8b4+
Fix checked in.
Status: ASSIGNED → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
Product: Core → MailNews Core
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: