Bug 301082 xpcom-shutdown is too late to destroy cached compose window; instead use quit-application which guards against reentrancy r+sr=bienvenu a=bsmedberg